removed -Dsonar.scanner.javaAdditionalOpts